<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/user_pfp_req_follow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="10dp">

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="340dp"
        android:layout_weight="1"
        android:text="\@user"
        android:textSize="10sp"
        app:layout_constraintLeft_toRightOf="@id/user_pfp_req_follow"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="340dp"
        android:layout_marginEnd="52dp"
        android:layout_weight="1"
        android:gravity="right"
        android:text="date"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toRightOf="@id/username"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/layout_rounded_mood_bg"
        android:orientation="vertical"
        android:layout_marginEnd="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toRightOf="@id/user_pfp_req_follow"
        app:layout_constraintStart_toEndOf="@+id/request_follow"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/edit_emotion_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:ems="10"
            android:hint="select mood"
            android:inputType="text"
            android:paddingBottom="10dp"
            android:textSize="25dp" />

        <!--        <Spinner-->
        <!--            android:id="@+id/emotion_spinner"-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="wrap_content" />-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/edit_reason"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:hint="Reason"
                android:padding="10dp" />

            <ImageView
                android:id="@+id/mood_image"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:gravity="center"
                app:srcCompat="@android:drawable/ic_menu_gallery" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/social_situation_icon"
                android:layout_width="15sp"
                android:layout_height="15sp"
                android:layout_marginLeft="10sp"
                android:layout_weight="0"
                app:srcCompat="@android:drawable/ic_menu_myplaces" />

            <Spinner
                android:id="@+id/social_situation_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/request_follow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="request\nfollow"
        android:textSize="6sp"
        tools:layout_editor_absoluteX="9dp"
        tools:layout_editor_absoluteY="354dp" />

    <ImageView
        android:id="@+id/profile_picture"
        android:layout_width="20sp"
        android:layout_height="20sp"
        tools:layout_editor_absoluteX="10dp"
        tools:layout_editor_absoluteY="333dp"
        tools:srcCompat="@tools:sample/avatars" />

</androidx.constraintlayout.widget.ConstraintLayout>