...
        app:layout_constraintBottom_toBottomOf="@+id/profile_header"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/filter_icon"
        tools:foregroundGravity="right" />

    <ListView
        android:id="@+id/history_listview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="180dp"
        android:divider="@null"
        android:dividerHeight="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
...
